docmd-main/v10/de/release-notes/0-9-5.md
---
title: "v0.9.5 - Autonome KI-Tools, Threads-Modernisierung & Template-Verfeinerungen"
description: "Versionshinweise für docmd v0.9.5 - Autonome KI-Assistent-Tools, Überarbeitung kollaborativer Threads-Diskussionen mit Inline-Vorschau, Template-UI-Verfeinerungen und OpenAPI-Workspace-Auflösung."
date: "2026-08-23"
---

### Highlights

`docmd` v0.9.5 bietet autonome KI-Assistenten-Agenten-Tools mit erweitertem 200k-Kontextfenster, eine vollständige Neugestaltung des kollaborativen Threads-Plugins mit rechts angedockter Registerkarte und Inline-Kommentarvorschau, UI-Verfeinerungen für die Summer- und Standard-Templates sowie OpenAPI-Multi-Projekt-Pfadauflösung.

### KI-Assistenten-Tools & Erweiterter Kontext (`@docmd/plugin-ai` & `docmd-assistant`)

- **Autonome MCP-Werkzeuge**: Fünf browserseitige Werkzeuge sind direkt in den Assistenten integriert:
  - `get_site_structure`: Untersucht Versionsbäume, unterstützte Sprachen, Projektgrenzen und Seitenhierarchien.
  - `search_documentation`: Durchsucht Dokumentationsseiten mit Volltext- und semantischer Vektorsuche.
  - `read_documentation_page`: Liest sauberen, strukturierten Markdown-Inhalt projektübergreifend.
  - `navigate_to_page`: Führt Besucher direkt zu relevanten Kapiteln und Unterabschnitten.
  - `copy_code_snippet`: Kopiert Codeblöcke und Befehle direkt in die Zwischenablage.
- **Unbegrenzter Kontext (200k Standard)**: Beseitigung der harten Zeichenbegrenzung von 15.000 Zeichen. Der Kontext wird jetzt vollständig an das LLM übergeben.
- **Konfigurierbares `contextWindow`**: Neues optionales `contextWindow` (oder `contextLimit`) in den `plugins.ai`-Einstellungen.
- **Optimiertes Codeblock-UI**: Syntax-Highlighting, Sprach-Badges und Ein-Klick-Kopieren.
- **Cloud-Relay-Korrekturen**: Behebung mehrfacher Protokollierungen und überflüssiger Anführungszeichen bei Tool-Aufrufen.

### Threads-Diskussions-Plugin (`@docmd/plugin-threads`)

- **Persistenz beim Wiederöffnen der Seitenleiste**: Ersetzung der DOM-Knoten-Verschiebung durch entkoppeltes Rendering aus dem Speicher und CSS-gesteuertes Umschalten (`body.tc-panel-open .threads-thread--inline`). Thread-Karten bleiben über Öffnen-, Schließen- und Wiederöffnungszyklen hinweg dauerhaft erhalten.
- **Kommentieren & Antworten ohne Neuladen**: Neue Threads, Antworten und Behebungen erfolgen direkt in-place ohne vollständiges Neuladen der Seite.
- **Neu gestaltete Inline-Kommentarvorschau**: Elegante Vorschaukarte unter dem hervorgehobenen Text mit Zitat-Badge (`"..."`) und Direktlink zum Hervorheben in der Seitenleiste.
- **Rechts angedockter Slide-Tab**: `.threads-fab` wurde als Slide-Tab bei `top: 50%; right: 0` platziert, wodurch Überschneidungen mit `.summer-totop` und dem KI-Eingabebereich vollständig entfallen.
- **Moderne Stroke-Iconografie**: Vollständige Überarbeitung der Icons mit Lucide/Feather-SVGs (`messages-square`, `quote`, `external-link`, `reply`, etc.) passend zum docmd-Stil.
- **Template-Designintegration**: Nahtlose Übernahme der Design-Tokens im Default- und Summer-Template (`--summer-surface`, `--summer-border`, `--summer-accent` etc.).
- **Hover-Aktionen an Überschriften**: Der Button „+ Neuer Thread“ wird erst bei Hover oder Tastaturfokus eingeblendet.

### OpenAPI-Plugin-Erweiterungen (`@docmd/plugin-openapi`)

- **Multi-Projekt-Workspace-Auflösung**: Spezifikationsdateien in komplexen Workspaces und Unterprojekten (z. B. `assets/docmd-api.json` in Sub-Sites) werden nun zuverlässig gefunden. Das Plugin durchsucht automatisch das Verzeichnis der aktiven Markdown-Datei, die Projektgrenze und das Workspace-Stammverzeichnis.
- **Download-Button beachtet Konfiguration**: Der Download-Button respektiert `download: true` und erzeugt root-relative Links.
- **Inline-OpenAPI-Spezifikationen**: Codeblöcke mit ```` ```openapi ```` akzeptieren nun direkt eingebettete JSON- oder YAML-Spezifikationen im Markdown-Dokument, ohne dass eine externe Datei erforderlich ist.
- **Präzise Fehlerdiagnose**: Fehlende oder ungültige Spezifikationspfade werden in Entwicklungs-Builds durch klare `.oa-error`-Hinweise hervorgehoben.

### Live-Server-Manifest-Funktion & Universelle Laufzeiterkennung (`@docmd/api`)

- **`requiresLiveServer`-Manifest-Fähigkeit**: Plugins, die eine aktive Verbindung zum lokalen Entwicklungs-Server über die RPC-Bridge benötigen (wie kollaboratives Schreiben, Dateipersistenz oder Live-Kommentare in `@docmd/plugin-threads`), können nun `requiresLiveServer: true` in ihrem Deskriptor (`PluginDescriptor`) und Paket-Manifest (`package.json#docmd.requiresLiveServer`) deklarieren.
- **Leichtgewichtige statische Builds ohne Ballast**: Bei statischen Produktions-Builds (`docmd build`) lässt docmd Client-Skripte, Meta-Tags und Stylesheets für reine Live-Plugins automatisch weg, behält jedoch die Markdown-Container- und Syntax-Parser bei. Statische Websites bleiben schlank, performant und fehlerfrei.
- **Universelle Live-Server-Erkennung (`docmd.isLive()` & `docmd.ping()`)**: Die `@docmd/api`-Browser-Laufzeitumgebung und der Dev-Server verfügen nun über eine standardisierte Verbindungsprüfung. Client-Plugins können synchron `docmd.isLive()` oder asynchron `await docmd.ping()` über die integrierte `system:ping`-Aktion aufrufen.

### Globale Dokumentationsparität

- **Mehrsprachige Synchronisierung**: Versionshinweise, KI-Relay-Anleitungen und Navigationsstrukturen wurden auf Deutsch (`de`), Englisch (`en`), Spanisch (`es`) und Chinesisch (`zh`) synchronisiert.
